test/conformance/chainsaw/validate/clusterpolicy/standard/audit/background-vars-roles/chainsaw-step-02-error-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: background-vars-roles
spec:
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: ns-vars-roles
    validate:
      failureAction: Audit
      message: The `owner` label is required for all Namespaces.
      pattern:
        metadata:
          labels:
            foo: '{{request.roles}}'
