test/conformance/chainsaw/validate/clusterpolicy/standard/audit/background-vars-roles/01-script-check-for-output.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: script-check-for-output
spec:
  timeouts: {}
  try:
  - script:
      content: "if kubectl apply -f manifests.yaml 2>&1 | grep -q 'variable {{request.roles}}
        is not allowed' \nthen \n    echo \"Test succeeded. The phrase 'variable {{request.roles}}
        is not allowed' is found.\"\n    exit 0\nelse \n    echo \"Test failed. The
        phrase 'variable {{request.roles}} is not allowed' has not been found.\"\n
        \   exit 1\nfi\n"
